<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:padding="20dp"
    tools:context="com.app.travelapp.route.home.HomeFragment">

    <LinearLayout
        android:id="@+id/origin_ll"
        style="@style/HomeLinearLayoutStyle"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/HomeFromToTextViewStyle"
            android:text="@string/from" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/origin_tv"
            style="@style/HomeCityNameTextViewStyle"
            android:text="@string/origin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/destination_ll"
        style="@style/HomeLinearLayoutStyle"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/origin_ll"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/HomeFromToTextViewStyle"
            android:text="@string/to" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/destination_tv"
            style="@style/HomeCityNameTextViewStyle"
            android:text="@string/destination" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/journey_date_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination_ll">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_weight="3"
            android:background="@android:color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/journey_date_tv"
                style="@style/WidthWrapContentHeightWrapContent"
                android:text="@string/journey_date"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/calendar_iv"
                style="@style/WidthWrapContentHeightWrapContent"
                android:paddingLeft="2dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:src="@drawable/ic_event_available_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/calendar_day_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/journey_date_tv" />

            <TextView
                android:id="@+id/calendar_day_tv"
                style="@style/WidthWrapContentHeightWrapContent"
                android:padding="10dp"
                android:scaleX="1.5"
                android:scaleY="2.5"
                android:text="20"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/calendar_iv"
                app:layout_constraintTop_toBottomOf="@id/journey_date_tv" />

            <TextView
                android:id="@+id/calendar_day_name_tv"
                style="@style/WidthWrapContentHeightWrapContent"
                android:paddingLeft="5dp"
                android:text="Mon"
                app:layout_constraintBottom_toTopOf="@+id/calendar_month_tv"
                app:layout_constraintLeft_toRightOf="@+id/calendar_day_tv" />

            <TextView
                android:id="@+id/calendar_month_tv"
                style="@style/WidthWrapContentHeightWrapContent"
                android:paddingLeft="5dp"
                android:text="May"
                app:layout_constraintBottom_toBottomOf="@+id/calendar_day_tv"
                app:layout_constraintLeft_toRightOf="@+id/calendar_day_tv" />

            <TextView
                android:id="@+id/calendar_year_tv"
                style="@style/WidthWrapContentHeightWrapContent"
                android:paddingLeft="5dp"
                android:text="2019"
                app:layout_constraintBottom_toBottomOf="@+id/calendar_day_tv"
                app:layout_constraintLeft_toRightOf="@+id/calendar_month_tv" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/show_map_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/show_map"
                android:textColor="@android:color/black"
                android:textScaleX="1.2" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/search_bus_btn"
        style="@style/AuthnButtonStyle"
        android:text="@string/search_buses"
        app:layout_constraintTop_toBottomOf="@+id/journey_date_ll"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
